--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
     "reselect": "^4.0.0",
+    "sass": "^1.36.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
