--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
     "react-dom": "^17.0.2",
+    "react-hot-toast": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.2",
