--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-sound": "^1.2.3",
     "@types/react-transition-group": "^4.4.2",
     "react": "^17.0.2",
     "react-confetti": "^6.0.1",
@@ -18,6 +19,7 @@
     "react-hot-toast": "^2.0.0",
     "react-redux": "^7.2.4",
     "react-scripts": "4.0.3",
+    "react-sound": "^1.2.0",
     "react-transition-group": "^4.4.2",
     "redux": "^4.1.0",
     "redux-persist": "^6.0.0",
